hack/k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media-viewer
  labels:
    app: media-viewer
  annotations:
    linkerd.io/inject: enabled
